Bug 1665652 - Fix to avoid failure in and updates to test_sendMailAddressIDN.js r=mkmelin Also includes corrections to comments.